--- a/.github/workflows/chatbotui.yml
+++ b/.github/workflows/chatbotui.yml
@@ -1,8 +1,14 @@
 name: Build and Publish Chatbot UI
+run-name: ${{ inputs.name }}
 on:
-  schedule:
-    - cron:  '0 0 * * *'
+#   schedule:
+#     - cron:  '0 0 * * *'
   workflow_dispatch:
+    inputs:
+      name:
+        description: 'Name of run'
+        required: false
+        default: Build and Publish Chatbot UI
 
 env:
   # Use docker.io for Docker Hub if empty
